# tauri-plugin-push-notifications

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
android/: build.gradle.kts
android/src/main/java/push/notifications/: PushNotificationsBridge.kt  PushNotificationsPlugin.kt
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: PushNotificationsPlugin.swift
permissions/: default.toml
src/: commands.rs  error.rs  lib.rs  mobile.rs
